[workspace]
resolver = "3"
members = [
    "leaflet-protocol",
    "latex-to-leaflet",
    "markdown-to-leaflet",
]

[workspace.package]
version = "0.30.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/panproto/proto-lenses"
homepage = "https://github.com/panproto/proto-lenses"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
insta = "1.40.0"
pretty_assertions = "1.4.1"
tree-sitter = "0.25"
pulldown-cmark = "0.13"
panproto-gat = { path = "../panproto/crates/panproto-gat", version = "0.30.0" }
panproto-schema = { path = "../panproto/crates/panproto-schema", version = "0.30.0" }
panproto-inst = { path = "../panproto/crates/panproto-inst", version = "0.30.0" }
panproto-lens = { path = "../panproto/crates/panproto-lens", version = "0.30.0" }
panproto-lens-dsl = { path = "../panproto/crates/panproto-lens-dsl", version = "0.30.0" }
panproto-protocols = { path = "../panproto/crates/panproto-protocols", version = "0.30.0" }
panproto-grammars = { path = "../panproto/crates/panproto-grammars", version = "0.30.0" }
leaflet-protocol = { path = "leaflet-protocol" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
