[package]
name = "latex-to-leaflet"
description = "LaTeX to Leaflet.pub document converter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "latex-to-leaflet-cli"
path = "src/bin/latex-to-leaflet-cli.rs"

[dependencies]
panproto-grammars = { workspace = true, features = ["lang-latex"] }
leaflet-protocol = { workspace = true }
panproto-schema = { workspace = true }
panproto-inst = { workspace = true }
panproto-lens = { workspace = true }
panproto-lens-dsl = { workspace = true }
panproto-protocols = { workspace = true }
tree-sitter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
pretty_assertions = { workspace = true }

[lints]
workspace = true
