[package]
name = "markdown-to-leaflet-napi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
markdown-to-leaflet = { workspace = true }
leaflet-protocol = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[lints.rust]
unsafe_code = "allow"
