[package]
name = "markdown-to-leaflet-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
markdown-to-leaflet = { workspace = true }
leaflet-protocol = { workspace = true }

[lints.rust]
unsafe_code = "allow"
