[package]
name = "markdown-to-leaflet-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
markdown-to-leaflet = { workspace = true }
leaflet-protocol = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints.rust]
unsafe_code = "allow"
